terraform/modules/ec2/main.tf
resource "aws_security_group" "maven-sg" {
  name        = "maven-security-group"
  description = "Security group for Maven EC2 instance"
  vpc_id      = var.vpc_id

  # SSH access
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTP access
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTPS access
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "maven-sg"
    Environment = "dev"
    Project     = "Maven-API"
  }
}

resource "aws_key_pair" "deploy_key" {
  key_name   = var.key_name
  public_key = var.public_key
}

resource "aws_instance" "ec2-instance" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  subnet_id              = var.subnet_id
  vpc_security_group_ids = [aws_security_group.maven-sg.id]
  key_name               = aws_key_pair.deploy_key.key_name
  associate_public_ip_address = true

  tags = {
    Name        = var.instance_name
    Environment = "dev"
    Project     = "Maven-API"
  }
}
